Fix bug where horizontal scrollbar would appear

--- a/src/pages/OrderPizza/OrderPizza.module.css
+++ b/src/pages/OrderPizza/OrderPizza.module.css
@@ -1,6 +1,6 @@
 .orderPizza {
     display: flex;
-    width: 100vw;
+    width: 100%;
     flex-direction: column;
     gap: 20px;
 }
